--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,3 +1,36 @@
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
+<app-header />
+<div class="bg-gray-900 text-white flex-column justify-center items-center">
+    <section id="home" class="flex justify-center items-center w-full home-size-custom poppins-regular"
+        style="background-image: url('img/backgroundHome2.png'); min-height: 100vh">
+        <article
+            class="w-full 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl rounded-2xl flex justify-between items-center flex-col content-1">
+            <div class="zoom-animation">
+                <img src="img/tomateMosten.png" alt="" />
+            </div>
+            <div class="">
+                <h1 class="zoom-animation text-white text-6xl font-bold">
+                    <span class="text-purple-custom">Mosten Tomatoes</span>
+                </h1>
+                <h1 class="zoom-animation text-white text-6xl font-bold">
+                    Onde cada filme é aplaudido…
+                </h1>
+                <h1 class="zoom-animation flex justify-end text-5xl font-bold">
+                    ou&nbsp;<span class="text-purple-custom">condenado.</span>
+                </h1>
+            </div>
+        </article>
+    </section>
+    <section id="filmes"
+        class="flex justify-center items-center w-full movies-size-custom border-t-8 border-b-8 border-roxo-personalizado poppins-regular">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum accusamus
+        dicta cumque, quaerat accusantium impedit consequatur tenetur aliquid nobis
+        placeat. Doloremque mollitia, consequuntur nostrum voluptatum laborum facere
+        cumque fugit quidem.
+    </section>
+    <section class="h-screen bg-black text-white flex justify-center items-center poppins-regular">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus harum laborum, ipsum et eos pariatur ratione laboriosam nihil debitis, maxime alias ducimus! Omnis illo voluptate natus aspernatur magni eos?
+    </section>
+    <div class="footer text-center bg-black py-2 poppins-regular">
+        © Desafio Mosten 2025 / Lucas Alberto / Todos os direitos reservados 
+    </div>
+</div>
