add: movies-details

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -11,8 +11,8 @@
                 <h1 class="zoom-animation text-white text-6xl font-bold">
                     <span class="text-purple-custom">Mosten Tomatoes</span>
                 </h1>
-                <h1 class="zoom-animation text-white text-6xl font-bold">
-                    Onde cada filme é aplaudido…
+                <h1 class="zoom-animation text-white text-5xl font-bold">
+                    Onde cada filme é <span class="text-purple-custom">aplaudido…</span>
                 </h1>
                 <h1 class="zoom-animation flex justify-end text-5xl font-bold">
                     ou&nbsp;<span class="text-purple-custom">condenado.</span>
@@ -21,11 +21,8 @@
         </article>
     </section>
     <section id="filmes"
-        class="flex justify-center items-center w-full movies-size-custom border-t-8 border-b-8 border-roxo-personalizado poppins-regular">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum accusamus
-        dicta cumque, quaerat accusantium impedit consequatur tenetur aliquid nobis
-        placeat. Doloremque mollitia, consequuntur nostrum voluptatum laborum facere
-        cumque fugit quidem.
+        class="flex justify-center items-center w-full movies-size-custom border-t-8 border-b-8 border-roxo-personalizado poppins-regular relative">
+        <app-list-movies />
     </section>
     <section class="h-screen bg-black text-white flex justify-center items-center poppins-regular">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus harum laborum, ipsum et eos pariatur ratione laboriosam nihil debitis, maxime alias ducimus! Omnis illo voluptate natus aspernatur magni eos?
