--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -19,7 +19,7 @@
     height: 100vh;
     }
     .movies-size-custom{
-        height: 100vh;
+        padding: 100px 0px 100px 0px;
         background-color: 1E003A;
     }
     img{
