--- a/src/app/components/list-movies/list-movies.html
+++ b/src/app/components/list-movies/list-movies.html
@@ -1,9 +1,9 @@
 <article
-    class="w-full h-full 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl h-3/5 text-white overflow-hidden mt-32 poppins-regular">
+    class="w-full h-full 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl h-3/5 text-white overflow-hidden poppins-regular">
     <div class="text-5xl font-bold title mb-12 quando flex flex-row items-center gap-3" data-aos="zoom-in-up"
         data-aos-duration="1200">
         <img src="img/icons/cinemaIcon.svg" class="w-16 h-16 icon-size1" alt="">Filmes
-        
+
     </div>
     <aside class="flex flex-row flex-wrap justify-center gap-3 text-center">
         <div *ngFor="let movie of movies" class="w-72 border-8 border-purple-custom rounded-2xl" data-aos="zoom-in-up"
@@ -16,7 +16,7 @@
                     <p class="font-bold text-xl bg-purple-custom text-white p-2 quando">{{ movie.title }}</p>
                 </div>
                 <div class="bg-purple-custom">
-                    <div class="flex-custom justify-center w-full bg-purple-custom gap-1 p-2">
+                    <div class="flex-custom justify-center w-full bg-purple-custom gap-1 ">
                         Gênero: {{ movie.genre }}
                     </div>
                 </div>
@@ -47,4 +47,10 @@
             </div>
         </div>
     </aside>
+    <div class="w-full mt-16 py-6 bg-purple-custom rounded-2xl flex justify-center items-center gap-4 font-bold">
+        <div class="rounded-xl p-4 bg-[#1b0341] flex flex-row gap-1 items-center">Total de <img src="img/icons/likeIcon.svg" alt="">: {{ getTotalLikes() }}</div>
+        <div class="rounded-xl p-4 bg-[#1b0341] flex flex-row gap-1 items-center">Total de <img src="img/icons/dislikeIcon.svg" alt="">: {{ getTotalDislikes() }}</div>
+        <div class="rounded-xl p-4 bg-[#1b0341]">Total de votos: {{ getTotalVotes() }}</div>
+    </div>
+
 </article>
