style: form-page

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -25,7 +25,7 @@
         <app-list-movies />
     </section>
     <section class="h-screen bg-black text-white flex justify-center items-center poppins-regular">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus harum laborum, ipsum et eos pariatur ratione laboriosam nihil debitis, maxime alias ducimus! Omnis illo voluptate natus aspernatur magni eos?
+        <app-form/>
     </section>
     <div class="footer text-center bg-black py-2 poppins-regular">
         © Desafio Mosten 2025 / Lucas Alberto / Todos os direitos reservados 
