--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -20,14 +20,14 @@
             </div>
         </article>
     </section>
-    <section id="filmes"
+    <section id="movies"
         class="flex justify-center items-center w-full movies-size-custom border-t-8 border-b-8 border-roxo-personalizado poppins-regular relative">
         <app-list-movies />
     </section>
-    <section class="h-screen bg-black text-white flex justify-center items-center poppins-regular">
-        <app-form/>
+    <section id="form" class="h-screen bg-black text-white flex justify-center items-center poppins-regular">
+        <app-form />
     </section>
     <div class="footer text-center bg-black py-2 poppins-regular">
-        © Desafio Mosten 2025 / Lucas Alberto / Todos os direitos reservados 
+        © Desafio Mosten 2025 / Lucas Alberto / Todos os direitos reservados
     </div>
 </div>
