--- a/src/app/components/list-movies/list-movies.html
+++ b/src/app/components/list-movies/list-movies.html
@@ -46,9 +46,12 @@
             </div>
         </div>
     </aside>
-    <div class="w-full mt-16 py-6 bg-purple-custom rounded-2xl flex justify-center items-center gap-4 font-bold">
-        <div class="rounded-xl p-4 bg-[#1b0341] flex flex-row gap-1 items-center">Total de <img src="img/icons/likeIcon.svg" alt="">: {{ getTotalLikes() }}</div>
-        <div class="rounded-xl p-4 bg-[#1b0341] flex flex-row gap-1 items-center">Total de <img src="img/icons/dislikeIcon.svg" alt="">: {{ getTotalDislikes() }}</div>
+    <div class="w-full mt-16 py-6 bg-purple-custom rounded-2xl flex justify-center items-center gap-4 font-bold"
+        data-aos="zoom-in-up" data-aos-duration="1200">
+        <div class="rounded-xl p-4 bg-[#1b0341] flex flex-row gap-1 items-center">Total de <img
+                src="img/icons/likeIcon.svg" alt="">: {{ getTotalLikes() }}</div>
+        <div class="rounded-xl p-4 bg-[#1b0341] flex flex-row gap-1 items-center">Total de <img
+                src="img/icons/dislikeIcon.svg" alt="">: {{ getTotalDislikes() }}</div>
         <div class="rounded-xl p-4 bg-[#1b0341]">Total de votos: {{ getTotalVotes() }}</div>
     </div>
 </article>
