--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,17 @@
     font-style: normal;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+    background-color: black;
+
+}   
+
+::-webkit-scrollbar-thumb{
+    width: 10px;
+    background-color: #5314b6;
+}
