fix: redirect-header

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,7 +1,7 @@
 <header id="header">
     <div class="container 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl xs:max-w-xl ">
         <div class="flex">
-            <a class="flex justify-center" href="/">
+            <a class="flex justify-center" href="#home">
                 <img src="img/logoMosten.png" alt=""> </a>
             <nav class="desktop noto-sans-semi poppins-regular">
                 <ul>
