--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,7 +5,7 @@
         <article
             class="w-full 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl rounded-2xl flex justify-between items-center flex-col content-1">
             <div class="zoom-animation">
-                <img src="img/tomateMosten.png" alt="" />
+                <img class="tomateMosten" src="img/tomateMosten.png" alt="" />
             </div>
             <div class="">
                 <h1 class="zoom-animation text-white text-6xl font-bold">
@@ -27,7 +27,7 @@
     <section id="form" class="h-screen bg-black text-white flex justify-center items-center poppins-regular">
         <app-form />
     </section>
-    <div class="footer text-center bg-black py-2 poppins-regular">
+    <footer class="footer text-center bg-black py-2 poppins-regular">
         © Desafio Mosten 2025 / Lucas Alberto / Todos os direitos reservados
-    </div>
+    </footer>
 </div>
