--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,9 +1,8 @@
-    * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     }
-
 
     .text-purple-custom {
     color: #5314b6;
@@ -65,6 +64,10 @@
     h2 {
         font-size: 2.2em;
     }
+    img{
+        width: 350px;
+        height: 350px;
+    }
     }
 
     @media (max-width: 1070px) {
@@ -72,9 +75,11 @@
         padding: 60px 0px 60px 0px;
         height: auto;
     }
+    img{
+        width: 300px;
+        height: 300px;
+    }
     .content-1 {
-
-
         max-width: 52.5rem;
         div {
         .flex-custom {
@@ -108,19 +113,10 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        gap: 60px;
+        gap: 10px;
         max-width: 46rem;
-        div {
-        div {
-            gap: 20px;
-        }
-        }
-
         h1 {
         font-size: 2.7em;
-        }
-        h2 {
-        font-size: 2em;
         }
     }
     .footer {
@@ -134,26 +130,17 @@
         height: auto;
     }
     .content-1 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 60px;
-        max-width: 29.4rem;
-        div {
+        max-width: 50.4rem;
         .flex-custom {
             gap: 0px;
-        }
-        div {
-            gap: 1px;
-        }
         }
 
         h1 {
         font-size: 2.1em;
         }
-        h2 {
-        font-size: 1.6em;
+        img{
+            width: 250px;
+            height: 250px
         }
 
     }
@@ -162,26 +149,31 @@
     }
     }
 
+    @media (max-width: 600px) {
+        .content-1 {
+        max-width: 48rem;
+        gap: 0px;
+        h1 {
+        font-size: 1.8em;
+        }
+    }}
+
     @media (max-width: 480px) {
     .movies-size-custom {
         padding: 50px 0px 50px 0px;
         height: auto;
     }
+    
     .content-1 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 60px;
-        max-width: 23rem;
+        max-width: 22rem;
+        gap: 0px;
         h1 {
-        font-size: 1.5em;
-        margin-top: 16px;
+        font-size: 1.4em;
         }
-        h2 {
-        font-size: 1.2em;
-        line-height: 26px;
-        }
+        img{
+        width: 200px;
+        height: 200px;
+    }
     }
     .footer {
         font-size: 0.7em;
@@ -190,17 +182,8 @@
 
     @media (max-width: 370px) {
     .content-1 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 15px;
         max-width: 19rem;
         h1 {
-        font-size: 1.4em;
-        margin-top: 16px;
-        }
-        h2 {
         font-size: 1.2em;
         }
     }
