style: movies-list-responsive

--- a/src/app/components/form/form.html
+++ b/src/app/components/form/form.html
@@ -1,5 +1,5 @@
 <article class="w-full h-full 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl rounded-2xl h-3/5">
-    <div class="flex flex-row items-center gap-2 mb-14">
+    <div class="flex flex-row items-center gap-2 mb-8 md:mb-10">
         <div class="font-bold text-5xl text-white flex-custom text-center">
             Cadastro de <span class="text-purple-custom">Filme/Série</span>
         </div>
@@ -16,7 +16,7 @@
 
             <input type="url" [(ngModel)]="poster" name="poster"
                 class="border border-white text-white bg-black placeholder-gray-500 p-2"
-                placeholder="URL do Pôster (Recomendável: 1200 x 1800)" required>
+                placeholder="URL do Pôster (Recomendável: 600 x 900)" required>
 
             <textarea [(ngModel)]="description" name="description" placeholder="Descrição"
                 class="border border-white text-white bg-black placeholder-gray-500 p-2 h-36 resize-none"
