--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -11,12 +11,12 @@
                 <h1 class="zoom-animation text-white text-6xl font-bold">
                     <span class="text-purple-custom">Mosten Tomatoes</span>
                 </h1>
-                <h1 class="zoom-animation text-white text-5xl font-bold">
+                <h2 class="zoom-animation text-white text-5xl font-bold">
                     Onde cada filme é <span class="text-purple-custom">aplaudido…</span>
-                </h1>
-                <h1 class="zoom-animation flex justify-end text-5xl font-bold">
+                </h2>
+                <h2 class="zoom-animation flex justify-end text-5xl font-bold">
                     ou&nbsp;<span class="text-purple-custom">condenado.</span>
-                </h1>
+                </h2>
             </div>
         </article>
     </section>
@@ -24,7 +24,8 @@
         class="flex justify-center items-center w-full movies-size-custom border-t-8 border-b-8 border-roxo-personalizado poppins-regular relative">
         <app-list-movies />
     </section>
-    <section id="form" class="h-screen bg-black text-white flex justify-center items-center poppins-regular">
+    <section id="form"
+        class="h-screen bg-black text-white flex justify-center items-center poppins-regular form-size-custom">
         <app-form />
     </section>
     <footer class="footer text-center bg-black py-2 poppins-regular">
