--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -2,36 +2,40 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    }
+}
 
-    .text-purple-custom {
+.text-purple-custom {
     color: #5314b6;
-    }
+}
 
-    .border-roxo-personalizado {
+.border-roxo-personalizado {
     border-color: #5314b6;
-    }
-    html {
+}
+
+html {
     scroll-behavior: smooth;
-    }
-    .home-size-custom {
+}
+
+.home-size-custom {
     height: 100vh;
-    }
-    .movies-size-custom{
-        padding: 100px 0px 100px 0px;
-        background-color: 1E003A;
-    }
-    img{
-        width: 400px;
-        height: 400px;
-    }
+}
 
-    .home-size-custom,
-    .movies-size-custom {
+.movies-size-custom {
+    padding: 120px 0px 120px 0px;
+    background-color: 1E003A;
+}
+
+img {
+    width: 400px;
+    height: 400px;
+}
+
+.home-size-custom,
+.movies-size-custom {
     width: 100%;
-    }
+}
 
-    @keyframes zoomIn {
+@keyframes zoomIn {
     from {
         transform: scale(0.8);
         opacity: 0;
@@ -40,70 +44,63 @@
         transform: scale(1);
         opacity: 1;
     }
-    }
+}
 
-    .zoom-animation {
+.zoom-animation {
     animation: zoomIn 1.5s ease-in-out forwards;
-    }
+}
 
-    @media (max-width: 1534px) {
+@media (max-width: 1534px) {
     h1 {
         font-size: 3em;
     }
-    }
+}
 
-    @media (max-height: 900px){
-        .experience-size-custom{
-            padding: 80px 0px 80px 0px;
-        }
-    }
-    @media (max-width: 1281px) {
+@media (max-width: 1281px) {
     h1 {
         font-size: 2.7em;
     }
     h2 {
         font-size: 2.2em;
     }
-    img{
+    img {
         width: 350px;
         height: 350px;
     }
-    }
+}
 
-    @media (max-width: 1070px) {
+@media (max-width: 1070px) {
     .movies-size-custom {
-        padding: 60px 0px 60px 0px;
+        padding: 70px 0px 70px 0px;
         height: auto;
     }
-    img{
+    img {
         width: 300px;
         height: 300px;
     }
     .content-1 {
         max-width: 52.5rem;
         div {
-        .flex-custom {
-            gap: 2px;
+            .flex-custom {
+                gap: 2px;
+            }
+            div {
+                gap: 20px;
+            }
         }
-        div {
-            gap: 20px;
-        }
-        }
-
         h1 {
-        font-size: 2.4em;
+            font-size: 2.4em;
         }
         h2 {
-        font-size: 1.8em;
+            font-size: 1.8em;
         }
     }
-
     .footer {
         font-size: 1em;
     }
-    }
+}
 
-    @media (max-width: 900px) {
+@media (max-width: 900px) {
     .movies-size-custom {
         padding: 60px 0px 60px 0px;
         height: auto;
@@ -116,15 +113,15 @@
         gap: 10px;
         max-width: 46rem;
         h1 {
-        font-size: 2.7em;
+            font-size: 2.7em;
         }
     }
     .footer {
         font-size: 0.8em;
     }
-    }
+}
 
-    @media (max-width: 710px) {
+@media (max-width: 710px) {
     .movies-size-custom {
         padding: 50px 0px 50px 0px;
         height: auto;
@@ -134,82 +131,91 @@
         .flex-custom {
             gap: 0px;
         }
-
         h1 {
-        font-size: 2.1em;
+            font-size: 2.5em;
         }
-        img{
+        h2 {
+            font-size: 1.9em;
+        }
+        img {
             width: 250px;
             height: 250px
         }
-
     }
     .footer {
         font-size: 0.8em;
     }
-    }
+}
 
-    @media (max-width: 600px) {
-        .content-1 {
+@media (max-width: 600px) {
+    .content-1 {
         max-width: 48rem;
         gap: 0px;
         h1 {
-        font-size: 1.8em;
+            font-size: 2.2em;
         }
-    }}
+        h2 {
+            font-size: 1.7em;
+        }
+    }
+}
 
-    @media (max-width: 480px) {
+@media (max-width: 480px) {
     .movies-size-custom {
         padding: 50px 0px 50px 0px;
         height: auto;
     }
-    
     .content-1 {
         max-width: 22rem;
         gap: 0px;
         h1 {
-        font-size: 1.4em;
+            font-size: 2em;
         }
-        img{
-        width: 200px;
-        height: 200px;
-    }
+        h2 {
+            font-size: 1.4em;
+        }
+        img {
+            width: 200px;
+            height: 200px;
+        }
     }
     .footer {
         font-size: 0.7em;
     }
-    }
+}
 
-    @media (max-width: 370px) {
+@media (max-width: 370px) {
     .content-1 {
         max-width: 19rem;
         h1 {
-        font-size: 1.2em;
+            font-size: 1.8em;
+        }
+        h2 {
+            font-size: 1.2em;
         }
     }
     .footer {
         font-size: 0.6em;
     }
-    }
+}
 
-    @media (min-width: 1024px) and (max-height: 770px) {
+@media (min-width: 1024px) and (max-height: 770px) {
     .movies-size-custom {
         padding: 80px 0px 80px 0px;
         height: auto;
     }
-    }
+}
 
-    @media (max-height: 500px) and (orientation: landscape) {
+@media (max-height: 500px) and (orientation: landscape) {
     .content-1 {
         max-width: 650px;
         h1 {
-        font-size: 2em;
+            font-size: 2em;
         }
         h2 {
-        font-size: 1.5em;
+            font-size: 1.5em;
         }
     }
-
     .movies-size-custom {
         padding: 80px 0px 80px 0px;
         height: auto;
@@ -218,13 +224,13 @@
         height: auto;
         padding: 60px 0px 60px 0px;
     }
-    }
+}
 
-    @media (max-width: 350px) {
+@media (max-width: 350px) {
     .size-custom1 {
         height: auto;
     }
-    .size-custom2 {
-        height: 135vh;
+    .form-size-custom {
+        height: 125vh;
     }
-    }
+}
