--- a/src/app/components/form/form.html
+++ b/src/app/components/form/form.html
@@ -1,3 +1,4 @@
+<app-toast-error/>
 <article class="w-full h-full 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl rounded-2xl h-3/5">
     <div class="flex flex-row items-center gap-2 mb-8 md:mb-10">
         <div class="font-bold text-5xl text-white flex-custom text-center">
