--- a/src/app/components/form/form.scss
+++ b/src/app/components/form/form.scss
@@ -236,3 +236,44 @@
             margin-bottom: 1em;
         }
     }
+     @media (min-width: 1024px) and (max-height: 650px) {
+    article {
+            min-width: 52rem;
+            max-width: 54.5rem;
+        }
+        form {
+            font-size: 1.1em;
+            button {
+                height: 60px;
+            }
+        }
+        .dad-div {
+            flex-direction: column;
+            justify-content: center;
+            gap: 5em;
+        }
+        .text-5xl {
+            font-size: 2.2em;
+        }
+        .form-width {
+            width: 100%;
+        }
+        .flex-custom {
+            gap: 0;
+        }
+        .icon-size1 {
+            transform: scale(0.8);
+            padding: 0;
+            width: 2em;
+            transform-origin: left;
+        }
+        .text-gray-custom {
+            font-size: 1.2em;
+        }
+        .margin-custom1 {
+            margin-bottom: 15px;
+        }
+        .margin-custom2 {
+            margin-bottom: 50px;
+        }
+    }
