--- a/src/app/components/list-movies/list-movies.scss
+++ b/src/app/components/list-movies/list-movies.scss
@@ -222,3 +222,40 @@
             }
         }
     }
+     @media (min-width: 1024px) and (max-height: 650px) {
+    article {
+            max-width: 60rem;
+            aside {
+                flex-wrap: wrap;
+                p {
+                    font-size: 1.3em;
+                }
+                .flex-custom {
+                    gap: 7px;
+                }
+                .h-img {
+                    height: 16rem;
+                }
+            }
+            .flex-custom {
+                gap: 0px;
+            }
+            .text-5xl {
+                font-size: 2.4em;
+                margin-bottom: 40px;
+            }
+            .text-sm {
+                font-size: 0.9em;
+            }
+            .icon-size1 {
+                transform: scale(0.8);
+                padding: 0;
+                width: 2em;
+            }
+            .icon-size {
+                transform: scale(1);
+                padding: 0;
+                width: 2em;
+            }
+        }
+    }
