--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -201,9 +201,34 @@ img {
 
 @media (min-width: 1024px) and (max-height: 770px) {
     .movies-size-custom {
-        padding: 80px 0px 80px 0px;
+        padding: 70px 0px 70px 0px;
         height: auto;
     }
+    img {
+        width: 350px;
+        height: 350px;
+    }
+    .content-1 {
+        max-width: 52.5rem;
+        div {
+            .flex-custom {
+                gap: 2px;
+            }
+            div {
+                gap: 20px;
+            }
+        }
+        h1 {
+            font-size: 2.8em;
+        }
+        h2 {
+            font-size: 2em;
+        }
+    }
+    .footer {
+        font-size: 1em;
+    }
+
 }
 
 @media (max-height: 500px) and (orientation: landscape) {
