fix: responsive-votes

--- a/src/app/components/form/form.html
+++ b/src/app/components/form/form.html
@@ -1,7 +1,7 @@
 <app-toast-error/>
 <article class="w-full h-full 2xl:max-w-7xl xl:max-w-6xl md:max-w-5xl sm:max-w-2xl rounded-2xl h-3/5">
-    <div class="flex flex-row items-center gap-2 mb-8 md:mb-10">
-        <div class="font-bold text-5xl text-white flex-custom text-center">
+    <div class="flex justify-center flex-row items-center mb-8 md:mb-10">
+        <div class="font-bold text-4xl text-white flex-custom text-center">
             Cadastro de <span class="text-purple-custom">Filme/Série</span>
         </div>
     </div>
